# mcptools

./: README.md  action.yml  pyproject.toml
mcptools/: bench_cmd.py  cli.py  client.py  dev_cmd.py  diff_cmd.py  docs_cmd.py  init_cmd.py  inspect_cmd.py  proxy_cmd.py  test_cmd.py  utils.py  validate_cmd.py
