[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcptools"
version = "0.1.0"
description = "The Swiss Army knife for MCP server development. Scaffold, inspect, test, and validate."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "ai", "developer-tools", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
mcptools = "mcptools.cli:app"

[project.urls]
Homepage = "https://github.com/Pavankumardhruv/mcptools"
Repository = "https://github.com/Pavankumardhruv/mcptools"
Issues = "https://github.com/Pavankumardhruv/mcptools/issues"
